--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Lms\AssignTo.cs" />
     <Compile Include="Lms\AvailabilityCriteria.cs" />
     <Compile Include="Lms\CompletionStatus.cs" />
+    <Compile Include="Lms\DueDateChangeType.cs" />
     <Compile Include="Lms\DueDateCriteria.cs" />
     <Compile Include="Lms\LearningCompletionStatus.cs" />
     <Compile Include="Lms\RequirementType.cs" />
