--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1480,7 +1480,6 @@
     <Compile Include="Model\LMS\LearningClass\LearningClass.Logic.cs" />
     <Compile Include="Model\LMS\LearningGradingSystemScale\LearningGradingSystemScale.cs" />
     <Compile Include="Model\LMS\LearningParticipant\LearningParticipant.cs" />
-    <Compile Include="Model\LMS\LearningParticipant\LearningParticipant.SaveHook.cs" />
     <Compile Include="Model\LMS\LearningParticipant\LearningParticipantService.cs" />
     <Compile Include="Model\LMS\LearningCourseRequirement\LearningCourseRequirement.cs" />
     <Compile Include="Model\LMS\LearningGradingSystem\LearningGradingSystem.cs" />
@@ -1596,6 +1595,7 @@
     <Compile Include="Plugin\HotFixes\193_MigratoinRollupForV15_4_1.cs" />
     <Compile Include="Plugin\HotFixes\192_MailgunCopyApiKeyToHttpWebhookSigningKey.cs" />
     <Compile Include="Plugin\HotFixes\200_AddMaxMindGeolocation.cs" />
+    <Compile Include="Plugin\HotFixes\210_LMSPageChanges.cs" />
     <Compile Include="Plugin\HotFixes\209_MigrationRollupsForV17_0_16.cs" />
     <Compile Include="Plugin\HotFixes\208_MigrationRollupsForV17_0_15.cs" />
     <Compile Include="Plugin\HotFixes\207_MigrationRollupsForV17_0_14.cs" />
