--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -192,6 +192,14 @@
     <Compile Include="Migrations\202410171119512_UpdateScheduleToolboxActionsLabelLava.Designer.cs">
       <DependentUpon>202410171119512_UpdateScheduleToolboxActionsLabelLava.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202410171630156_Rollup_20241017.cs" />
+    <Compile Include="Migrations\202410171630156_Rollup_20241017.designer.cs">
+      <DependentUpon>202410171630156_Rollup_20241017.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202410171655004_CodeGenerated_20241017.cs" />
+    <Compile Include="Migrations\202410171655004_CodeGenerated_20241017.designer.cs">
+      <DependentUpon>202410171655004_CodeGenerated_20241017.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.Designer.cs">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
@@ -2361,6 +2369,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202410171119512_UpdateScheduleToolboxActionsLabelLava.resx">
       <DependentUpon>202410171119512_UpdateScheduleToolboxActionsLabelLava.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202410171630156_Rollup_20241017.resx">
+      <DependentUpon>202410171630156_Rollup_20241017.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202410171655004_CodeGenerated_20241017.resx">
+      <DependentUpon>202410171655004_CodeGenerated_20241017.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.resx">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
