--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1597,6 +1597,7 @@
     <Compile Include="Plugin\HotFixes\200_AddMaxMindGeolocation.cs" />
     <Compile Include="Plugin\HotFixes\211_MigrationRollupsForV17_0_17.cs" />
     <Compile Include="Plugin\HotFixes\210_LMSPageChanges.cs" />
+    <Compile Include="Plugin\HotFixes\212_PrayerCategoryPageBlockSettings.cs" />
     <Compile Include="Plugin\HotFixes\209_MigrationRollupsForV17_0_16.cs" />
     <Compile Include="Plugin\HotFixes\208_MigrationRollupsForV17_0_15.cs" />
     <Compile Include="Plugin\HotFixes\207_MigrationRollupsForV17_0_14.cs" />
