+ (Group) Added a Group Schedule Coordinator that can be notified when a Person accepts, declines or self-schedules for a Schedule occurrence tied to the Group.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -200,6 +200,10 @@
     <Compile Include="Migrations\202410171655004_CodeGenerated_20241017.designer.cs">
       <DependentUpon>202410171655004_CodeGenerated_20241017.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202410180248298_AddGroupScheduleCoordinator.cs" />
+    <Compile Include="Migrations\202410180248298_AddGroupScheduleCoordinator.Designer.cs">
+      <DependentUpon>202410180248298_AddGroupScheduleCoordinator.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.Designer.cs">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
@@ -2375,6 +2379,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202410171655004_CodeGenerated_20241017.resx">
       <DependentUpon>202410171655004_CodeGenerated_20241017.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202410180248298_AddGroupScheduleCoordinator.resx">
+      <DependentUpon>202410180248298_AddGroupScheduleCoordinator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.resx">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
