--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -2204,6 +2204,7 @@
     <Compile Include="Utility\ExtensionMethods\RockResponseContextExtensions.cs" />
     <Compile Include="Utility\ExtensionMethods\SecurityGrantExtensions.cs" />
     <Compile Include="Utility\ExtensionMethods\Image.cs" />
+    <Compile Include="Utility\ExtensionMethods\DecimalRockExtensions.cs" />
     <Compile Include="Utility\FileUrlHelper.cs" />
     <Compile Include="Utility\IdHasher.cs" />
     <Compile Include="Utility\IWebHostEnvironment.cs" />
