--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -204,6 +204,10 @@
     <Compile Include="Migrations\202410180248298_AddGroupScheduleCoordinator.Designer.cs">
       <DependentUpon>202410180248298_AddGroupScheduleCoordinator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements.cs" />
+    <Compile Include="Migrations\202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements.designer.cs">
+      <DependentUpon>202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.Designer.cs">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
@@ -2383,6 +2387,9 @@
     <EmbeddedResource Include="Migrations\202410180248298_AddGroupScheduleCoordinator.resx">
       <DependentUpon>202410180248298_AddGroupScheduleCoordinator.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements.resx">
+      <DependentUpon>202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.resx">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
     </EmbeddedResource>
@@ -3957,6 +3964,8 @@
     <None Include="Migrations\202410101546296_AddDefaultCheckInAdvertisement_Image.jpg">
       <DependentUpon>202410101546296_AddDefaultCheckInAdvertisement.cs</DependentUpon>
     </None>
+    <Content Include="Migrations\202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements_spFinance_PledgeAnalyticsQuery.sql" />
+    <Content Include="Migrations\202410231736231_PledgeAnalyticsAndPledgeEntryEnhancements_spFinance_PledgeAnalyticsQueryWithMultipleAccountIds.sql" />
     <Content Include="Migrations\Version 15.0\Version 1.15.0\202302092033593_Rollup_20230209_UpdateRemindersSystemCommunication.sql">
       <DependentUpon>202302092033593_Rollup_20230209.cs</DependentUpon>
     </Content>
