--- a/Rock.Blocks/Rock.Blocks.csproj
+++ b/Rock.Blocks/Rock.Blocks.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Core\TagReport.cs" />
     <Compile Include="Engagement\StreakTypeExclusionList.cs" />
     <Compile Include="Engagement\StreakMapEditor.cs" />
+    <Compile Include="Reporting\PageParameterFilter.cs" />
     <Compile Include="Security\AuthScopeList.cs" />
     <Compile Include="Security\AuthClientList.cs" />
     <Compile Include="Security\SecurityChangeAuditList.cs" />
