--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\202410241828213_AddHighlightColorToGradingScale.Designer.cs">
       <DependentUpon>202410241828213_AddHighlightColorToGradingScale.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202410251721110_RenamePageRateLimitPeriod.cs" />
+    <Compile Include="Migrations\202410251721110_RenamePageRateLimitPeriod.Designer.cs">
+      <DependentUpon>202410251721110_RenamePageRateLimitPeriod.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.Designer.cs">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
@@ -2396,6 +2400,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202410241828213_AddHighlightColorToGradingScale.resx">
       <DependentUpon>202410241828213_AddHighlightColorToGradingScale.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202410251721110_RenamePageRateLimitPeriod.resx">
+      <DependentUpon>202410251721110_RenamePageRateLimitPeriod.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.resx">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
