--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -216,6 +216,10 @@
     <Compile Include="Migrations\202410251721110_RenamePageRateLimitPeriod.Designer.cs">
       <DependentUpon>202410251721110_RenamePageRateLimitPeriod.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202410291634223_UpdateIsCheckInAllowedDefaultToTrue.cs" />
+    <Compile Include="Migrations\202410291634223_UpdateIsCheckInAllowedDefaultToTrue.Designer.cs">
+      <DependentUpon>202410291634223_UpdateIsCheckInAllowedDefaultToTrue.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.Designer.cs">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
@@ -2403,6 +2407,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202410251721110_RenamePageRateLimitPeriod.resx">
       <DependentUpon>202410251721110_RenamePageRateLimitPeriod.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202410291634223_UpdateIsCheckInAllowedDefaultToTrue.resx">
+      <DependentUpon>202410291634223_UpdateIsCheckInAllowedDefaultToTrue.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.resx">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
