--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -85,6 +85,8 @@
     <Compile Include="Blocks\CheckIn\CheckInScheduleBuilder\GroupLocationsBag.cs" />
     <Compile Include="Blocks\CheckIn\CheckInScheduleBuilder\CloneScheduleBag.cs" />
     <Compile Include="Blocks\CheckIn\Configuration\CheckInSimulator\CheckInSimulatorOptionsBag.cs" />
+    <Compile Include="Blocks\CheckIn\Configuration\CustomSettingsBag.cs" />
+    <Compile Include="Blocks\CheckIn\Configuration\CustomSettingsOptionsBag.cs" />
     <Compile Include="Blocks\CheckIn\Configuration\LabelDesigner\DataSourceBag.cs" />
     <Compile Include="Blocks\CheckIn\Configuration\LabelDesigner\IconItemBag.cs" />
     <Compile Include="Blocks\CheckIn\Configuration\LabelDesigner\LabelDesignerOptionsBag.cs" />
@@ -554,6 +556,7 @@
     <Compile Include="CheckIn\AchievementBag.cs" />
     <Compile Include="CheckIn\AttendanceRequestBag.cs" />
     <Compile Include="CheckIn\AttendanceSessionRequestBag.cs" />
+    <Compile Include="CheckIn\CampusBag.cs" />
     <Compile Include="CheckIn\CheckInResultBag.cs" />
     <Compile Include="CheckIn\CheckoutResultBag.cs" />
     <Compile Include="CheckIn\CloudPrintProxyConnectionStatusBag.cs" />
