--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Migrations\202410291634223_UpdateIsCheckInAllowedDefaultToTrue.Designer.cs">
       <DependentUpon>202410291634223_UpdateIsCheckInAllowedDefaultToTrue.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202410301621464_AddRequiresGrading.cs" />
+    <Compile Include="Migrations\202410301621464_AddRequiresGrading.Designer.cs">
+      <DependentUpon>202410301621464_AddRequiresGrading.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.Designer.cs">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
@@ -2410,6 +2414,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202410291634223_UpdateIsCheckInAllowedDefaultToTrue.resx">
       <DependentUpon>202410291634223_UpdateIsCheckInAllowedDefaultToTrue.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202410301621464_AddRequiresGrading.resx">
+      <DependentUpon>202410301621464_AddRequiresGrading.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.6\202404221542135_Mobile_AdditionalSettingsJson.resx">
       <DependentUpon>202404221542135_Mobile_AdditionalSettingsJson.cs</DependentUpon>
