- Enhanced the Date and DateTime formatters for the label designer.
# Conflicts:
#	Rock/CheckIn/v2/Labels/FieldSourceHelper.cs

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -933,6 +933,7 @@
     <Compile Include="CheckIn\v2\Labels\Formatters\DataFormatter.cs" />
     <Compile Include="CheckIn\v2\Labels\DateAttributeFieldDataSource.cs" />
     <Compile Include="CheckIn\v2\Labels\Formatters\CheckInDetailDataFormatter.cs" />
+    <Compile Include="CheckIn\v2\Labels\Formatters\DateTimeDataFormatter.cs" />
     <Compile Include="CheckIn\v2\Labels\Formatters\DateDataFormatter.cs" />
     <Compile Include="CheckIn\v2\Labels\FieldDataSource.cs" />
     <Compile Include="CheckIn\v2\Labels\FieldSourceHelper.cs" />
