--- a/Rock.Tests.UnitTests/Rock.Tests.UnitTests.csproj
+++ b/Rock.Tests.UnitTests/Rock.Tests.UnitTests.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Rock\CheckIn\v2\Labels\Renderers\ZplImageHelperTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Labels\Renderers\ZplImageOptionsTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Labels\Renderers\ZplLabelRendererTests.cs" />
+    <Compile Include="Rock\CheckIn\v2\Labels\TextFieldConfigurationTests.cs" />
     <Compile Include="Rock\CheckIn\v2\TemplateConfigurationDataTests.cs" />
     <Compile Include="Rock\CheckIn\v2\AreaConfigurationDataTests.cs" />
     <Compile Include="Rock\Cms\ThemeDefinitionTests.cs" />
