- Added plugin migrations for pre-alpha build

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1597,6 +1597,7 @@
     <Compile Include="Plugin\HotFixes\193_MigratoinRollupForV15_4_1.cs" />
     <Compile Include="Plugin\HotFixes\192_MailgunCopyApiKeyToHttpWebhookSigningKey.cs" />
     <Compile Include="Plugin\HotFixes\200_AddMaxMindGeolocation.cs" />
+    <Compile Include="Plugin\HotFixes\215_MigrationRollupsForV17_0_18.cs" />
     <Compile Include="Plugin\HotFixes\211_MigrationRollupsForV17_0_17.cs" />
     <Compile Include="Plugin\HotFixes\210_LMSPageChanges.cs" />
     <Compile Include="Plugin\HotFixes\213_CategoryTreeViewBlockSettings.cs" />
