--- a/Rock.Tests.UnitTests/Rock.Tests.UnitTests.csproj
+++ b/Rock.Tests.UnitTests/Rock.Tests.UnitTests.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rock\Blocks\Mobile\Cms\DailyChallengeEntryTests.cs" />
     <Compile Include="Rock\CheckIn\v2\CheckInMockDatabase.cs" />
+    <Compile Include="Rock\CheckIn\v2\Filters\AbilityLevelOpportunityFilterTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Filters\AgeOpportunityFilterTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Filters\BirthMonthOpportunityFilterTests.cs" />
     <Compile Include="Rock\CheckIn\v2\Filters\DataViewOpportunityFilterTests.cs" />
