--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -923,7 +923,7 @@
     <Compile Include="CheckIn\v2\Filters\PreferredGroupsOpportunityFilter.cs" />
     <Compile Include="CheckIn\v2\Filters\SpecialNeedsOpportunityFilter.cs" />
     <Compile Include="CheckIn\v2\IValidPropertiesBoxExtensions.cs" />
-    <Compile Include="CheckIn\v2\Labels\AttendanceLabel.cs" />
+    <Compile Include="CheckIn\v2\Labels\LabelAttendanceDetail.cs" />
     <Compile Include="CheckIn\v2\Labels\AttendanceLabelData.cs" />
     <Compile Include="CheckIn\v2\Labels\AttendeePhotoFieldConfiguration.cs" />
     <Compile Include="CheckIn\v2\Labels\BarcodeFieldConfiguration.cs" />
